--- a/categorias/categorias.html
+++ b/categorias/categorias.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,21 +9,162 @@
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
+    
     <div class="fondo">
         <img src="../../assets/img/LOGOrapid-riders.png" alt="rapid-riders.png" width="20%">
         <font size="5">RAPID RIDERS</font>
+        <div class="shop">
+            <i class="fas fa-shopping-cart fa-2x"></i>
+        </div>
     </div>
+
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 bg-info rounded-4" id="categoriasDisp">
-                <span>Hola Mundo</span>
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-12 mt-2 buscar">
+                        <div class="row">
+                            <div class="col-12">
+                                <input type="text" class="form-control" placeholder="&#xf002; buscar">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contaner-cards mt-2" style="font-weight: bold;">
+                        <div id="categoriasDisp">
+                            <div class="col-3 rounded-pill text-center m-1">
+                                <img src="https://i.pinimg.com/564x/bc/d9/a8/bcd9a891a854a17a73cd816db0f30b9c.jpg"
+                                    alt="" style="width: 80px; height: 80px; border-radius: 50%;">
+                                <p>Desayunos</p>
+                            </div>
+                            <div class="col-3 rounded-pill text-center m-1">
+                                <img src="https://i.pinimg.com/564x/be/74/ac/be74ace2713d8f550010576cc1697eff.jpg"
+                                    alt="" style="width: 80px; height: 80px; border-radius: 50%;">
+                                <p>Almuerzos</p>
+                            </div>
+                            <div class="col-3 rounded-pill text-center m-1">
+                                <img src="https://i.pinimg.com/564x/ec/4d/92/ec4d92cfc2ec5c2cc9e34a0e045fd6b7.jpg"
+                                    alt="" style="width: 80px; height: 80px; border-radius: 50%;">
+                                <p>Mariscos</p>
+                            </div>
+                            <div class="col-3 rounded-pill text-center m-1">
+                                <img src="https://i.pinimg.com/564x/91/59/cd/9159cd89768b530bea466e2d115bfc7c.jpg"
+                                    alt="" style="width: 80px; height: 80px; border-radius: 50%;">
+                                <p>Postres</p>
+                            </div>
+                            <div class="col-3 rounded-pill text-center m-1">
+                                <img src="https://i.pinimg.com/564x/91/59/cd/9159cd89768b530bea466e2d115bfc7c.jpg"
+                                    alt="" style="width: 80px; height: 80px; border-radius: 50%;">
+                                <p>Postres</p>
+                            </div>
+                            <div class="col-3 rounded-pill text-center m-1">
+                                <img src="https://i.pinimg.com/564x/91/59/cd/9159cd89768b530bea466e2d115bfc7c.jpg"
+                                    alt="" style="width: 80px; height: 80px; border-radius: 50%;">
+                                <p>Postres</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-12 bg-secondary rounded-4" id="categoriasCarga">
-                <span>simon mundo</span>
+            <div class="col-md-12 rounded-4" id="categoriasCarga">
+                <div class="row" id="restaurantes">
+                    <div class="col-5 m-2 text-center restaurantes" id="restaurante-1">
+                        <div class="row">
+                            <div class="col-md-12 img-restaurante mb-2" style="background-image: url('https://i.pinimg.com/564x/99/3d/b3/993db33e9e3f27e22aaad28664e96975.jpg'); height: 100px;">
+                            </div>
+                            <div class="col-md-12 info-restaurante">
+                                <div class="row">
+                                    <div class="col-6 text-start">
+                                        Burguer King <br>
+                                        Descripción
+                                    </div>
+                                    <div class="col-6 text-center">
+                                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><br>
+                                        Clasificación
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5 m-2 text-center restaurantes" id="restaurante-2">
+                        <div class="row">
+                            <div class="col-md-12 img-restaurante mb-2" style="background-image: url('https://cdn3.elmorito.com/platform/shop/1/2021-07-06/67-icon-hacienda.jpg'); height: 100px;">
+                            </div>
+                            <div class="col-md-12 info-restaurante">
+                                <div class="row">
+                                    <div class="col-6 text-start">
+                                        El Morito <br>
+                                        Descripción
+                                    </div>
+                                    <div class="col-6 text-center">
+                                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><br>
+                                        Clasificación
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5 m-2 text-center restaurantes" id="restaurante-3">
+                        <div class="row">
+                            <div class="col-md-12 img-restaurante mb-2" style="background-image: url('https://i.pinimg.com/564x/c7/84/67/c78467db9ff497393cb548a48f02d451.jpg'); height: 100px;">
+                            </div>
+                            <div class="col-md-12 info-restaurante">
+                                <div class="row">
+                                    <div class="col-6 text-start">
+                                        McDonald's <br>
+                                        Descripción
+                                    </div>
+                                    <div class="col-6 text-center">
+                                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><br>
+                                        Clasificación
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5 m-2 text-center restaurantes" id="restaurante-4">
+                        <div class="row">
+                            <div class="col-md-12 img-restaurante mb-2" style="background-image: url('https://i.pinimg.com/564x/0d/d2/e9/0dd2e9f81b64519b2c005bf0ee7bb834.jpg'); height: 100px;">
+                            </div>
+                            <div class="col-md-12 info-restaurante">
+                                <div class="row">
+                                    <div class="col-6 text-start">
+                                        Picsa jot <br>
+                                        Descripción
+                                    </div>
+                                    <div class="col-6 text-center">
+                                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><br>
+                                        Clasificación
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5 m-2 text-center restaurantes" id="restaurante-5">
+                        <div class="row">
+                            <div class="col-md-12 img-restaurante mb-2" style="background-image: url('https://i.pinimg.com/564x/0d/d2/e9/0dd2e9f81b64519b2c005bf0ee7bb834.jpg'); height: 100px;">
+                            </div>
+                            <div class="col-md-12 info-restaurante">
+                                <div class="row">
+                                    <div class="col-6 text-start">
+                                        Picsa jot <br>
+                                        Descripción
+                                    </div>
+                                    <div class="col-6 text-center">
+                                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><br>
+                                        Clasificación
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
