--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menú</title>
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <input type="checkbox" id="menu" />
+    <input type="checkbox" id="menu"/>
     <label for="menu" class="menu">
         <span></span>
         <span></span>
@@ -19,10 +19,10 @@
 
     <nav class="nav">
         <ul>
-            <li><a href="#Categorias">Categorías</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#Categorias" onclick="cargar('../categorias/categorias.html')">Categorías</a></li>
+            <li><a href="#Login" onclick="cargar('../login/login.html')">Login</a></li>
+            <li><a href="#LandinPage" onclick="cargar('../registro/registro-clientes.html')">Landing Page</a></li>
+            <li><a href="#Registro" onclick="cargar('../landing-page.html')">Registro</a></li>
         </ul>
     </nav>
 
@@ -30,5 +30,5 @@
         <iframe src="../categorias/categorias.html" frameborder="0" id="informacion"></iframe>
     </main>
 </body>
-
+<script src="./assets/js/controlador.js"></script>
 </html>
