--- a/productos/productos.html
+++ b/productos/productos.html
@@ -7,6 +7,7 @@
     <title>Productos</title>
     <link rel="shortcut icon" href="../../assets/img/LOGOrapid-riders.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="stylesheet" href="./assets/styles/map.css">
     <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -327,7 +328,7 @@
                                         class="fa-solid fa-xmark"></i></a>
                             </div>
                             <div class="col-8">
-                                <h3></h3>
+                                <h3 id="nomProduct"></h3>
                             </div>
                         </div>
                     </div>
@@ -379,7 +380,7 @@
                                         class="fa-solid fa-xmark"></i></a>
                             </div>
                             <div class="col-8">
-                                <h3 id="nomProduct"></h3>
+                                <h3>Pago Factura</h3>
                             </div>
                         </div>
                     </div>
@@ -398,7 +399,8 @@
                                     </div>
                                     <div class="col-12 mb-3">
                                         <input type="number" class="form-control" name="txtNumTar" id="txtNumTar"
-                                            id="txtNumTar" onClick="this.select();" placeholder="Ingrese Numero Tarjeta" maxlength="12" size="12" >
+                                            id="txtNumTar" onClick="this.select();" placeholder="Ingrese Numero Tarjeta"
+                                            maxlength="12" size="12">
                                     </div>
                                 </div>
                             </div>
@@ -420,7 +422,52 @@
                         <div class="container-fluid text-center my-2">
                             <div class="row">
                                 <div class="col-12">
-                                    <button type="button" class="btn btn-warning">Finalizar Compra</button>
+                                    <button type="button" class="btn btn-warning" id="btnPagar">Finalizar Compra</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de seleccion de ubicacion -->
+    <div class="modal fade rounded-bottom" id="mdlUbicacion" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-warning text-center">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-2">
+                                <a type="button" class="btn" data-dismiss="modal" id="btnCerrarUbicación"><i
+                                        class="fa-solid fa-xmark"></i></a>
+                            </div>
+                            <div class="col-8">
+                                <h3>Ubicación</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="container-fluid">
+                                <div class="row mx-1">
+                                    <div class="col-md-8">
+                                        <input id="srcUbicacion" class="form-control form-control-sm mt-2 mb-2 w-80 mx-auto text-center font-weight-bold rounded border-0 shadow-sml" type="text"
+                                            placeholder="Buscar un lugar">
+                                    </div>
+                                    <div id="map" class="col-sm-12"></div>
+                                </div>
+                            </div>
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <input type="text" class="col-12 mb-2" name="lat" id="lat" placeholder="Latitud" required>
+                                        <input type="text" class="col-12 mb-2" name="lon" id="lon" placeholder="Longitud" required>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -430,7 +477,10 @@
         </div>
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="./assets/js/controlador.js"></script>
-
+<script src="./assets/js/map.js"></script>
+<!-- prettier-ignore -->
+<script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzBq9H-M7exVwXolX125HWmbgrbbQns7s&callback=initMap&libraries=places&v=weekly"></script>
 </html>
