Adición del historial de compras, con esto el frontend está terminado

--- a/compras/historial.html
+++ b/compras/historial.html
@@ -27,99 +27,46 @@
             <div class="body col-12">
                 <div class="row  m-2">
                     <div class="col-12 border border-secondary rounded-4" id="cuerpo">
-                        <div class="row m-2">
-                            <div class="col-12 detalles">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                Orden #1
-                                            </div>
-                                            <div class="col-12">Akiles Baeza</div>
-                                            <div class="col-12">En su casa</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4 text-end align-middle">
-                                        <div class="row mb-2">
-                                            <div class="col-12">
-                                                Total: 150.00
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="row text-end">
-                                            <div class="col-8 text-danger text-start"><p>Estado de la orden</p></div>
-                                            <div class="col-4 tex-end">
-                                                <button class="btn btn-sm btn-danger rounded-pill" style="font-size: x-small;">Ver Mas</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
-                            </div>
-                            <div class="col-12 detalles">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                Orden #2
-                                            </div>
-                                            <div class="col-12">Armando Esteban Quito</div>
-                                            <div class="col-12">En su casa</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4 text-end align-middle">
-                                        <div class="row mb-2">
-                                            <div class="col-12">
-                                                Total: 360.00
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="row text-end">
-                                            <div class="col-8 text-warning text-start"><p>Estado de la orden</p></div>
-                                            <div class="col-4 tex-end">
-                                                <button class="btn btn-sm btn-warning rounded-pill" style="font-size: x-small;">Ver Mas</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
-                            </div>
-                            <div class="col-12 detalles">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                Orden #3
-                                            </div>
-                                            <div class="col-12">Lucia Fernanda (LuciFer)</div>
-                                            <div class="col-12">En su casa</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4 text-end align-middle">
-                                        <div class="row mb-2">
-                                            <div class="col-12">
-                                                Total: 150.00
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="row text-end">
-                                            <div class="col-8 text-success text-start"><p>Estado de la orden</p></div>
-                                            <div class="col-4 tex-end">
-                                                <button class="btn btn-sm btn-success rounded-pill" style="font-size: x-small;">Ver Mas</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
-                            </div>
+                        <div class="row m-2" id="ordenes">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer"></div>
+        </div>
+    </div>
+    <!-- Modal de compras -->
+    <div class="modal fade rounded-bottom" id="mdlCompras" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content border border-secondary" style="max-height: 650px;">
+                <div class="modal-header bg-warning text-center">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-2">
+                                <a type="button" class="btn" data-dismiss="modal" id="btnCerrarCarrito"><i
+                                        class="fa-solid fa-xmark"></i></a>
+                            </div>
+                            <div class="col-8">
+                                <h3>Productos</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body border border-secondary rounded-4 m-3">
+                    <div class="container" style="max-height: 380px; overflow: hidden; overflow-y: scroll;">
+                        <div class="row" id="productosCarrito">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 text-end">Total: Lps. <span id="totalPedido"></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
