--- a/menu/menu.html
+++ b/menu/menu.html
@@ -21,11 +21,11 @@
 
     <nav class="nav">
         <ul class="padre">
-            <li><a href="#Categorias" onclick="cargar('../categorias/categorias.html')" class="hijo" id="asd">Categorías</a></li>
-            <li><a href="#Historial" onclick="cargar('../compras/historial.html')" class="hijo" id="ass">Historial de Compras</a></li>
+            <li><a href="#Categorias" onclick="cargar('../categorias/categorias.html')" class="hijo" id="asd"><i class="fa-solid fa-cash-register"></i> &nbsp;Categorías / Compras</a></li>
+            <li><a href="#Historial" onclick="cargar('../compras/historial.html')" class="hijo" id="ass"><i class="fa-solid fa-outdent"></i> &nbsp;Historial de Compras</a></li>
         </ul>
         <ul class="padre">
-            <li><a href="#CerrarSesion" onclick="cerrarSesion()" class="hijo" id="Sesion">Cerrar Sesion</a></li>
+            <li><a href="#CerrarSesion" onclick="cerrarSesion()" class="hijo" id="Sesion"><i class="fa-solid fa-right-from-bracket"></i> &nbsp;Cerrar Sesión</a></li>
         </ul>
     </nav>
 
